@@ -609,6 +609,22 @@ Sets the object of the wxSizerFlags to center itself in the area it is given.
 \helpref{wxSizerFlags::Center}{wxsizerflagscenter} for people with the other dialect of english.
 
 
+\membersection{wxSizerFlags::DoubleBorder}\label{wxsizerflagsdoubleborder}
+
+\func{wxSizerFlags\& }{DoubleBorder}{\param{int }{direction = wxALL}}
+
+Sets the border in the given \arg{direction} having twice the default border
+size.
+
+
+\membersection{wxSizerFlags::DoubleHorzBorder}\label{wxsizerflagsdoublehorzborder}
+
+\func{wxSizerFlags\& }{DoubleHorzBorder}{\void}
+
+Sets the border in left and right directions having twice the default border
+size.
+
+
 \membersection{wxSizerFlags::Expand}\label{wxsizerflagsexpand}
 
 \func{wxSizerFlags\& }{Expand}{\void}
@@ -650,4 +666,13 @@ Aligns the object to the right, shortcut for \texttt{Align(wxALIGN\_RIGHT)}
 \wxheading{See also}
 
 \helpref{Align}{wxsizerflagsalign}
+
+
+\membersection{wxSizerFlags::TripleBorder}\label{wxsizerflagstriplebleborder}
+
+\func{wxSizerFlags\& }{TripleBorder}{\param{int }{direction = wxALL}}
+
+Sets the border in the given \arg{direction} having thrice the default border
+size.
+
 
